//file:noinspection UnnecessaryQualifiedReference
plugins {
    id("java")
    id("application")
    id("jacoco")
    alias(libs.plugins.ebean)
    alias(libs.plugins.openapi.generator)
    alias(libs.plugins.node)
    alias(libs.plugins.spotless)
    alias(libs.plugins.sonarlint)
    alias(libs.plugins.ssh)
    alias(libs.plugins.download)
    alias(libs.plugins.release)
    alias(libs.plugins.jib)
    alias(libs.plugins.osdetector)
}

release {
    tagTemplate = 'V${version}'
}

node {
    download = true
    version = "22.19.0"
    distBaseUrl = "https://mirrors.huaweicloud.com/nodejs/"
    workDir = rootProject.layout.projectDirectory.dir(".gradle/")
    pnpmWorkDir = rootProject.layout.projectDirectory.dir(".gradle/")
}

allprojects {
    if (it.name == "mahu-bom") {
        return;
    }

    apply plugin: "java"
    apply plugin: "jacoco"
    apply plugin: "project-report"
    apply plugin: "com.diffplug.spotless"
    apply plugin: "name.remal.sonarlint"

    group = "cool.houge.mahu"

    java {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        options.compilerArgs += [
            "-parameters"
        ]
        options.warnings = false
    }

    test {
        useJUnitPlatform()
    }

    jacoco {
        toolVersion = "0.8.13"
    }

    jacocoTestReport {
        dependsOn test
        reports {
            html.required = true
            html.outputLocation = layout.buildDirectory.dir("reports/jacoco")
        }
    }

    spotless {
        def prettierVersion = "3.6.2"
        def npmrcFile = "${rootDir}/.npmrc"
        def prettierBase = ["prettier": prettierVersion]

        java {
            palantirJavaFormat("2.89.0")
            targetExclude("**/src/main/gen/**/*", "**/build/generated/**/*")
        }
        sql {
            target("src/**/*.sql")
            prettier(prettierBase + ["prettier-plugin-sql": "0.19.2"])
                .config([
                    "plugins"     : ["prettier-plugin-sql"],
                    "language"    : 'postgresql',
                    "keywordCase" : 'upper',
                    "dataTypeCase": 'upper',
                ])
                .npmrc(npmrcFile)
        }
        yaml {
            target("src/**/*.yaml", "openapi/admin/**/*.yaml")
            prettier(prettierBase).npmrc(npmrcFile)
        }
        format("xml") {
            target("src/**/*.xml")
            prettier(prettierBase + ["@prettier/plugin-xml": "3.4.2"])
                .config(["tabSize": 4, "plugins": ["@prettier/plugin-xml"]])
                .npmrc(npmrcFile)
        }
    }

    sonarLint {
        ignoreFailures = true
        languages {
            include("java")
        }
        rules {
            disable("java:S1611")
        }
        ignoredPaths.add("**/oas/vo/**")
        ignoredPaths.add("**/oas/controller/**")
    }

    sonarlintMain {
        reports {
            html.required = true
        }
    }

    configurations {
        configureEach {
            exclude group: "org.slf4j", module: "slf4j-simple"
            exclude group: "ch.qos.logback", module: "logback-classic"
            exclude group: "ch.qos.logback", module: "logback-core"
            exclude group: "io.ebean", module: "ebean-migration"
            exclude group: "io.avaje", module: "avaje-validator-inject-plugin"
            exclude group: "io.avaje", module: "avaje-validator-http-plugin"
        }
    }

    // 部署服务器配置
    remotes {
        dev01 {
            host = "mahu.houge.cool"
            user = "root"
            identity = file("${System.getProperty("user.home")}/.ssh/id_rsa")
        }
    }

    dependencies {
        implementation(platform(project(":mahu-bom")))
        annotationProcessor(platform(project(":mahu-bom")))
        testAnnotationProcessor(platform(project(":mahu-bom")))

        annotationProcessor("org.projectlombok:lombok")
        annotationProcessor("org.mapstruct:mapstruct-processor")
        annotationProcessor("io.avaje:avaje-validator-generator")
        compileOnly("org.projectlombok:lombok")
        compileOnly("org.mapstruct:mapstruct")

        testImplementation("org.junit.jupiter:junit-jupiter")
        testImplementation("org.junit.platform:junit-platform-launcher")
        testImplementation("org.assertj:assertj-core")
        testImplementation("org.awaitility:awaitility")
        testImplementation("org.mockito:mockito-junit-jupiter")
        testImplementation("io.helidon.testing:helidon-testing-junit5")
        testImplementation("org.apache.logging.log4j:log4j-core")
        testImplementation("org.apache.logging.log4j:log4j-slf4j2-impl")
    }

    repositories {
        maven {url "https://repo.huaweicloud.com/repository/maven"}
        mavenLocal()
        mavenCentral()
    }
}

tasks.register("openapiDepsInstall", com.github.gradle.node.pnpm.task.PnpmTask.class) {
    group("openapi tools")
    workingDir = rootProject.file("openapi")
    pnpmCommand = [
        "install"
    ]
}

tasks.register("jacocoRootReport", JacocoReport) {
    group = "verification"
    description = "Generates an aggregate JaCoCo report for all modules."

    def jacocoProjects = allprojects.findAll { it.name != "mahu-bom" && it.plugins.hasPlugin("java") }

    dependsOn(jacocoProjects.collect { it.tasks.named("test") })

    def sourceSetsByProject = jacocoProjects.collect { p ->
        p.extensions.findByType(org.gradle.api.tasks.SourceSetContainer)
    }.findAll { it != null }

    additionalSourceDirs.from(sourceSetsByProject.collectMany { it.named("main").get().allSource.srcDirs })
    sourceDirectories.from(sourceSetsByProject.collectMany { it.named("main").get().allSource.srcDirs })
    classDirectories.from(sourceSetsByProject.collectMany { it.named("main").get().output.classesDirs.files })

    executionData.from(jacocoProjects.collect { p ->
        p.fileTree(dir: p.layout.buildDirectory.asFile.get(), includes: ["jacoco/test.exec", "jacoco/test*.exec"])
    })

    reports {
        xml.required = true
        html.required = true
        html.outputLocation = layout.buildDirectory.dir("reports/jacoco/root")
    }
}
